tests/ui/reachable/unreachable-code-ret.rs
#![deny(unreachable_code)]

fn main() {
    return;
    println!("Paul is dead"); //~ ERROR unreachable statement
}
